--- a/public/stylus/discover-artists.styl
+++ b/public/stylus/discover-artists.styl
@@ -1,70 +1,92 @@
-/*------------------------------------*
-	$ NIB
-*------------------------------------*/
-@import 'nib'
+// /*------------------------------------*
+// 	$ NIB
+// *------------------------------------*/
+// @import 'nib'
 
-/*------------------------------------*
-	$ BASE
-*------------------------------------*/
+// /*------------------------------------*
+// 	$ BASE
+// *------------------------------------*/
+// @import 'base.styl'
+
+// /*------------------------------------*
+// 	$ LOGOS
+// *------------------------------------*/
+// @import 'elements/logos.styl'
+
+// /*------------------------------------*
+// 	$ MENUS
+// *------------------------------------*/
+// @import 'elements/menus.styl'
+
+// /*------------------------------------*
+// 	$ TEXTS
+// *------------------------------------*/
+// @import 'elements/texts.styl'
+
+// /*------------------------------------*
+// 	$ FILTERS
+// *------------------------------------*/
+// @import 'elements/filters.styl'
+
+// ------------------------------------*
+// 	$ INPUTS
+// *------------------------------------
+// @import 'elements/inputs.styl'
+
+// /*------------------------------------*
+// 	$ BUTTONS
+// *------------------------------------*/
+// @import 'elements/buttons.styl'
+
+// /*------------------------------------*
+// 	$ ARTISTS
+// *------------------------------------*/
+// @import 'elements/artists.styl'
+
+
+// .artists
+// 	max-width max-width
+// 	margin auto
+	
+// .artists-container
+// 	display flex
+// 	max-width max-width
+// 	margin auto
+// 	padding 0 .5rem
+// 	&__artists
+// 		flex 1
+// 	&__left-filters
+// 	&__right-filters
+// 		width 0
+// 		overflow hidden
+// 		transition width .5s
+// 	&__left-filters.visible
+// 	&__right-filters.visible
+// 		width auto
+
+// .more-artists
+// 	max-width max-width
+// 	margin auto
+// 	text-align center
+
+
+/*------------------------------------------------------------------------------------------------------------*
+	$ DEPURADO---------------------------------------------------------------------------------------------------
+*------------------------------------------------------------------------------------------------------------*/
+@import 'nib'
 @import 'base.styl'
 
-/*------------------------------------*
-	$ LOGOS
-*------------------------------------*/
-@import 'elements/logos.styl'
-
-/*------------------------------------*
-	$ MENUS
-*------------------------------------*/
 @import 'elements/menus.styl'
-
-/*------------------------------------*
-	$ TEXTS
-*------------------------------------*/
+@import 'elements/logos.styl'
 @import 'elements/texts.styl'
-
-/*------------------------------------*
-	$ FILTERS
-*------------------------------------*/
-@import 'elements/filters.styl'
-
-/*------------------------------------*
-	$ INPUTS
-*------------------------------------*/
+@import 'elements/buttons.styl'
 @import 'elements/inputs.styl'
 
-/*------------------------------------*
-	$ BUTTONS
-*------------------------------------*/
-@import 'elements/buttons.styl'
+@import 'objects/header.styl'
+@import 'objects/slogan.styl'
+@import 'objects/filters.styl'
+@import 'objects/artists.styl'
+@import 'objects/more.styl'
+@import 'objects/footer.styl'
+@import 'objects/login.styl'
 
-/*------------------------------------*
-	$ ARTISTS
-*------------------------------------*/
-@import 'elements/artists.styl'
-
-
-.artists
-	max-width max-width
-	margin auto
-	
-.artists-container
-	display flex
-	max-width max-width
-	margin auto
-	padding 0 .5rem
-	&__artists
-		flex 1
-	&__left-filters
-	&__right-filters
-		width 0
-		overflow hidden
-		transition width .5s
-	&__left-filters.visible
-	&__right-filters.visible
-		width auto
-
-.more-artists
-	max-width max-width
-	margin auto
-	text-align center
