--- a/public/stylus/elements/buttons.styl
+++ b/public/stylus/elements/buttons.styl
@@ -182,3 +182,49 @@
 	font-family 'Raleway'
 	border 1px solid #ddd
 	cursor pointer
+	
+	
+/*------------------------------------*
+	$ BUTTON LINER
+*------------------------------------*/
+.button-liner
+	color #000
+	cursor pointer
+	font-size 1rem
+	letter-spacing 1px
+	display table-cell
+	border 1px solid #bbb
+	text-transform uppercase
+	font-family 'Roboto Condensed'
+	&__action
+		padding .5em .75em
+		display table-cell
+		&.following
+		&.cancel
+			display none
+	&__number
+		padding .5em
+		display table-cell
+		border-left 1px solid #bbb
+	
+	&[data-size='small']
+		font-size .85rem
+	&[data-size='large']
+		font-size 1.15rem
+	
+.button-liner.disabled
+	color #aaa
+	border-color #ccc
+	.button-liner__number
+		border-color #bbb
+	.button-liner__action
+		&.folllow
+			display none
+		&.following
+			display table-cell
+	&:hover
+		.button-liner__action
+			&.following
+				display none
+			&.cancel
+				display table-cell
