refactor and market view

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,11 +25,15 @@
 			<img class="logo__normal" src="/img/logo.png">
 		</a>
 		<nav class="skinny-menu" data-icon='true'>
-			<a  class="skinny-menu__item" href="/works/category/all/page-1">
-				<i class="skinny-menu__item__icon fa fa-search"></i>
-				<span class="skinny-menu__item__text">Descubre</span>
+			<a class="skinny-menu__item" href="/works/category/all/page-1">
+				<i class="skinny-menu__item__icon fa fa-paint-brush"></i>
+				<span class="skinny-menu__item__text">Obras</span>
 			</a>
-			<a href="#" class="skinny-menu__item">
+			<a class="skinny-menu__item" href="/users/specialty/all/page-1">
+				<i class="skinny-menu__item__icon fa fa-heart-o"></i>
+				<span class="skinny-menu__item__text">Artistas</span>
+			</a>
+			<a class="skinny-menu__item" href="/products/type/all/page-1/">
 				<i class="skinny-menu__item__icon fa fa-diamond"></i>
 				<span class="skinny-menu__item__text">Market</span>
 			</a>
@@ -39,7 +43,6 @@
 			</a>
 		</nav>
 	</header>
-
 
 	<!-- ********************************************************************
 		$ CATEGORY MENU
