--- a/app/views/pages/users.html
+++ b/app/views/pages/users.html
@@ -19,7 +19,7 @@
 	<!-- ********************************************************************
 		$ HEADER
 	********************************************************************* -->
-	<header class="header">
+	<!-- <header class="header">
 		<a class="logo" href="/">
 			<img class="logo__small" src="/img/logo-small.png">
 			<img class="logo__normal" src="/img/logo.png">
@@ -30,6 +30,30 @@
 				<span class="skinny-menu__item__text">Descubre</span>
 			</a>
 			<a href="#" class="skinny-menu__item">
+				<i class="skinny-menu__item__icon fa fa-diamond"></i>
+				<span class="skinny-menu__item__text">Market</span>
+			</a>
+			<a class="skinny-menu__item js-signInButton">
+				<i class="skinny-menu__item__icon fa fa-user"></i>
+				<span class="skinny-menu__item__text">Sign in</span>
+			</a>
+		</nav>
+	</header> -->
+	<header class="header">
+		<a class="logo" href="/">
+			<img class="logo__small" src="/img/logo-small.png">
+			<img class="logo__normal" src="/img/logo.png">
+		</a>
+		<nav class="skinny-menu" data-icon='true'>
+			<a class="skinny-menu__item" href="/works/category/all/page-1">
+				<i class="skinny-menu__item__icon fa fa-paint-brush"></i>
+				<span class="skinny-menu__item__text">Obras</span>
+			</a>
+			<a class="skinny-menu__item active" href="/users/specialty/all/page-1">
+				<i class="skinny-menu__item__icon fa fa-heart-o"></i>
+				<span class="skinny-menu__item__text">Artistas</span>
+			</a>
+			<a class="skinny-menu__item" href="/products/type/all/page-1/">
 				<i class="skinny-menu__item__icon fa fa-diamond"></i>
 				<span class="skinny-menu__item__text">Market</span>
 			</a>
@@ -67,6 +91,7 @@
 			<button class="button-filter js-rightFiltersButton">Ordenar &nbsp <i class="fa fa-caret-right"></i></button>
 		</div>
 	</section>
+
 
 	<!-- ********************************************************************
 		$ WORKS CONTAINER
@@ -108,7 +133,7 @@
 							<img src="/img/artists/artist1.jpg">
 						</div>
 						<div class="info">
-							<p class="high-text" data-size='small'>{{ user.username }}</p>
+							<p class="high-text" data-size='small'>{{ user.firstname }}</p>
 							<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
 						</div>
 					</a>
@@ -134,6 +159,201 @@
 					</div>
 				</article>
 				{% endfor %}
+			</section>
+		</div>
+	</div>
+
+
+	<!-- ********************************************************************
+		$ MORE
+	********************************************************************* -->
+	<div class="more">
+		<button class="button-solid js-moreButton" data-size='small' data-color='red'>Ver más</button>
+	</div>
+
+
+	<!-- ********************************************************************
+		$ SLOGAN
+	********************************************************************* -->
+	<section class="slogan">
+		<span class="slogan-text">Muestra tu talento artístico!</span>
+		<button class="button-solid js-signUpButton" data-size='large'>Sign Up</button>
+		<!-- <button class="button-solid js-signUpButton" data-size='large'>Regístrate</button> -->
+	</section>
+
+
+	<!-- ********************************************************************
+		$ FOOTER
+	********************************************************************* -->
+	<div class="footer-container">
+		<footer class="footer">
+			<div class="footer__logo">
+				<a class="logo" href="#">
+					<img class="logo__small" src="/img/logo-small-white.png">
+					<img class="logo__normal" src="/img/logo-white.png">
+				</a>
+			</div>
+			<div class="footer__sections">
+				<div class="footer__section copyright">
+					<p class="skinny-text" data-size='small' data-color='light'>COPYRIGHT © 2015 - ALL RIGHTS RESERVED.</p>
+				</div>
+				<div class="footer__section links">
+					<p class="medium-text">Blog</p>
+					<p class="medium-text">Terminos</p>
+					<p class="medium-text">Condiciones</p>
+				</div>
+				<div class="footer__section social">
+					<i class="fa fa-facebook"></i>
+					<i class="fa fa-twitter"></i>
+					<i class="fa fa-google-plus"></i>
+				</div>			
+			</div>
+		</footer>
+	</div>
+
+
+	<!-- ********************************************************************
+		$ LOGIN
+	********************************************************************* -->
+	<section class="login-modal">
+		<div class="login-box js-loginBox">
+			<header class="login-box__header">			
+				<div class="skinny-menu">
+					<a href="#" class="skinny-menu__item js-signInFormButton">
+						Ingresar
+					</a>
+					<a href="#" class="skinny-menu__item js-signUpFormButton">
+						Registrarme
+					</a>
+				</div>
+			</header>
+			<form class="login-box__form js-signUpForm">
+		 		<a href="#" class="facebook-button" data-expand='true'>
+					<i class="fa fa-facebook-official"></i>&nbsp; Registrarme con Facebook
+				</a>
+				<div class="separator-text">
+					<span class="line"></span>
+					<span class="text">Con email</span>
+					<span class="line"></span>
+				</div>
+				<input class="input" data-size='large' name="username" placeholder="Username" type="text">
+				<input class="input" data-size='large' name="email" placeholder="Email" type="email">
+				<input class="input" data-size='large' name="password" placeholder="Password" type="password">
+				<input class="input" data-size='large' name="first-name" placeholder="First Name" type="text">
+				<input class="input" data-size='large' name="last-name" placeholder="Last Name" type="text">
+				<select class="input" name="gender">
+					<option selected disabled>Género</option>
+					<option value="Male">Masculino</option>
+					<option value="Female">Femenino</option>
+				</select>
+				<div class="question">
+					<input name="question" type="checkbox" id="question">
+					<label for="question" class="medium-text">¿Eres Artista profesional?</label>
+				</div>
+				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Registrarme" type="submit">
+				<p class="high-text note" data-size="small">Al registrarte estas aceptando los <strong>terminos y condiciones</strong> de Arte Manifiesto</p>
+			</form>
+			<form class="login-box__form js-signInForm">
+		 		<a href="#" class="facebook-button" data-expand='true'>
+					<i class="fa fa-facebook-official"></i>&nbsp; Ingresar con Facebook
+				</a>
+				<div class="separator-text">
+					<span class="line"></span>
+					<span class="text">Con email</span>
+					<span class="line"></span>
+				</div>
+				<input class="input" data-size='large' name="email" placeholder="Email" type="text">
+				<input class="input" data-size='large' name="password" placeholder="Password" type="password">
+				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Ingresar" type="submit">
+				<p class="high-text note js-rememberFormButton" data-size="small">Recordar contraseña</p>
+			</form>
+			<form class="login-box__form js-rememberForm">
+				<div class="separator-text">
+					<span class="line"></span>
+					<span class="text">Recordar contraseña</span>
+					<span class="line"></span>
+				</div>
+				<input class="input" data-size='large' name="email" placeholder="Email" type="text">
+				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Recordar" type="submit">
+				<p class="high-text note js-rememberBackButton" data-size="small">Ingresar</p>
+			</form>
+			<div class="login-box__closed js-loginClosed"><i class="fa fa-times"></i></div>
+		</div>
+	</section>
+
+
+	<script type="text/template" id="artist-template">
+		<article class="artist">
+			<a class="artist-header" href="#">
+			<div class="avatar">
+				<img src="/img/artists/artist1.jpg">
+			</div>
+			<div class="info">
+				<p class="high-text" data-size='small'><%= firstname %></p>
+				<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
+			</div>
+			</a>
+			<div class="artist-works">
+				<div class="work work1"></div>
+				<div class="work work2"></div>
+				<div class="work work3"></div>
+				<div class="work work4"></div>
+				<div class="work work5"></div>
+				<div class="work work6"></div>                  
+			</div>
+			<div class="artist-follow">
+			<% if (following) { %>
+				<button class="button-liner disabled js-followButton" data-following="true" data-userId="<%= id %>" data-size='small'>
+			<% } else { %>
+				<button class="button-liner js-followButton" data-following="false" data-userId="<%= id %>" data-size='small'>
+			<% } %>
+					<span class="button-liner__action folllow">Seguir</span>
+					<span class="button-liner__action following"><i class="fa fa-check"></i> Siguiendo</span>
+					<span class="button-liner__action cancel"><i class="fa fa-times-circle"></i> Cancelar</span>
+					<span class="button-liner__number">13,2k</span>
+				</button>
+			</div>
+		</article>
+	</script>
+
+	<script>
+
+		var users = {{ users|json|safe }}
+		console.log('users: ', users)
+
+		var pagination = {{ pagination|json|safe }};
+		console.log('pagination: ', pagination)
+
+		var user = {{ user|json|safe }};
+		console.log('user: ', user)
+
+		// var works = {{ works|json|safe }};
+		// console.log('works: ', works)
+
+		var categories = {{ categories|json|safe }};
+		console.log('categories: ', categories)
+
+		var url = {{ url|json|safe }};
+		console.log('url: ', url)
+
+	</script>
+
+	<script src="/js/vendor/jquery.min.js"></script>
+	<script src="/js/vendor/salvattore.js"></script>
+	<script src="/js/vendor/underscore-min.js"></script>
+
+	<script src="/js/lib/utils.js"></script>
+
+	<script src="/js/lib/login.js"></script>
+	<script src="/js/lib/filters.js"></script>
+	<script src="/js/lib/artist.js"></script>
+	<script src="/js/lib/artists.js"></script>
+
+	<script src="/js/discover-artists.js"></script>
+
+</body>
+</html>
+
 
 			<!-- 
 				<article class="artist">
@@ -436,193 +656,3 @@
 						</button>
 					</div>
 				</article> -->
-			</section>
-		</div>
-	</div>
-
-
-	<!-- ********************************************************************
-		$ MORE
-	********************************************************************* -->
-	<div class="more">
-		<button class="button-solid js-moreButton" data-size='small' data-color='red'>Ver más</button>
-	</div>
-
-
-	<!-- ********************************************************************
-		$ SLOGAN
-	********************************************************************* -->
-	<section class="slogan">
-		<span class="slogan-text">Muestra tu talento artístico!</span>
-		<button class="button-solid js-signUpButton" data-size='large'>Sign Up</button>
-		<!-- <button class="button-solid js-signUpButton" data-size='large'>Regístrate</button> -->
-	</section>
-
-
-	<!-- ********************************************************************
-		$ FOOTER
-	********************************************************************* -->
-	<div class="footer-container">
-		<footer class="footer">
-			<div class="footer__logo">
-				<a class="logo" href="#">
-					<img class="logo__small" src="/img/logo-small-white.png">
-					<img class="logo__normal" src="/img/logo-white.png">
-				</a>
-			</div>
-			<div class="footer__sections">
-				<div class="footer__section copyright">
-					<p class="skinny-text" data-size='small' data-color='light'>COPYRIGHT © 2015 - ALL RIGHTS RESERVED.</p>
-				</div>
-				<div class="footer__section links">
-					<p class="medium-text">Blog</p>
-					<p class="medium-text">Terminos</p>
-					<p class="medium-text">Condiciones</p>
-				</div>
-				<div class="footer__section social">
-					<i class="fa fa-facebook"></i>
-					<i class="fa fa-twitter"></i>
-					<i class="fa fa-google-plus"></i>
-				</div>			
-			</div>
-		</footer>
-	</div>
-
-
-	<!-- ********************************************************************
-		$ LOGIN
-	********************************************************************* -->
-	<section class="login-modal">
-		<div class="login-box js-loginBox">
-			<header class="login-box__header">			
-				<div class="skinny-menu">
-					<a href="#" class="skinny-menu__item js-signInFormButton">
-						Ingresar
-					</a>
-					<a href="#" class="skinny-menu__item js-signUpFormButton">
-						Registrarme
-					</a>
-				</div>
-			</header>
-			<form class="login-box__form js-signUpForm">
-		 		<a href="#" class="facebook-button" data-expand='true'>
-					<i class="fa fa-facebook-official"></i>&nbsp; Registrarme con Facebook
-				</a>
-				<div class="separator-text">
-					<span class="line"></span>
-					<span class="text">Con email</span>
-					<span class="line"></span>
-				</div>
-				<input class="input" data-size='large' name="username" placeholder="Username" type="text">
-				<input class="input" data-size='large' name="email" placeholder="Email" type="email">
-				<input class="input" data-size='large' name="password" placeholder="Password" type="password">
-				<input class="input" data-size='large' name="first-name" placeholder="First Name" type="text">
-				<input class="input" data-size='large' name="last-name" placeholder="Last Name" type="text">
-				<select class="input" name="gender">
-					<option selected disabled>Género</option>
-					<option value="Male">Masculino</option>
-					<option value="Female">Femenino</option>
-				</select>
-				<div class="question">
-					<input name="question" type="checkbox" id="question">
-					<label for="question" class="medium-text">¿Eres Artista profesional?</label>
-				</div>
-				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Registrarme" type="submit">
-				<p class="high-text note" data-size="small">Al registrarte estas aceptando los <strong>terminos y condiciones</strong> de Arte Manifiesto</p>
-			</form>
-			<form class="login-box__form js-signInForm">
-		 		<a href="#" class="facebook-button" data-expand='true'>
-					<i class="fa fa-facebook-official"></i>&nbsp; Ingresar con Facebook
-				</a>
-				<div class="separator-text">
-					<span class="line"></span>
-					<span class="text">Con email</span>
-					<span class="line"></span>
-				</div>
-				<input class="input" data-size='large' name="email" placeholder="Email" type="text">
-				<input class="input" data-size='large' name="password" placeholder="Password" type="password">
-				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Ingresar" type="submit">
-				<p class="high-text note js-rememberFormButton" data-size="small">Recordar contraseña</p>
-			</form>
-			<form class="login-box__form js-rememberForm">
-				<div class="separator-text">
-					<span class="line"></span>
-					<span class="text">Recordar contraseña</span>
-					<span class="line"></span>
-				</div>
-				<input class="input" data-size='large' name="email" placeholder="Email" type="text">
-				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Recordar" type="submit">
-				<p class="high-text note js-rememberBackButton" data-size="small">Ingresar</p>
-			</form>
-			<div class="login-box__closed js-loginClosed"><i class="fa fa-times"></i></div>
-		</div>
-	</section>
-
-
-	<script type="text/template" id="artist-template">
-		<article class="artist">
-			<a class="artist-header" href="#">
-			<div class="avatar">
-				<img src="/img/artists/artist1.jpg">
-			</div>
-			<div class="info">
-				<p class="high-text" data-size='small'><%= firstname %></p>
-				<p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
-			</div>
-			</a>
-			<div class="artist-works">
-				<div class="work work1"></div>
-				<div class="work work2"></div>
-				<div class="work work3"></div>
-				<div class="work work4"></div>
-				<div class="work work5"></div>
-				<div class="work work6"></div>                  
-			</div>
-			<div class="artist-follow">
-			<% if (following) { %>
-				<button class="button-liner disabled js-followButton" data-following="true" data-userId="<%= id %>" data-size='small'>
-			<% } else { %>
-				<button class="button-liner js-followButton" data-following="false" data-userId="<%= id %>" data-size='small'>
-			<% } %>
-					<span class="button-liner__action folllow">Seguir</span>
-					<span class="button-liner__action following"><i class="fa fa-check"></i> Siguiendo</span>
-					<span class="button-liner__action cancel"><i class="fa fa-times-circle"></i> Cancelar</span>
-					<span class="button-liner__number">13,2k</span>
-				</button>
-			</div>
-		</article>
-	</script>
-
-	<script>
-
-		var users = {{ users|json|safe }}
-		console.log('users: ', users)
-
-		var pagination = {{ pagination|json|safe }};
-		console.log('pagination: ', pagination)
-
-		var user = {{ user|json|safe }};
-		console.log('user: ', user)
-
-		var works = {{ works|json|safe }};
-		console.log('works: ', works)
-
-		var categories = {{ categories|json|safe }};
-		console.log('categories: ', categories)
-
-		var url = {{ url|json|safe }};
-		console.log('url: ', url)
-
-	</script>
-
-	<script src="/js/vendor/jquery.min.js"></script>
-	<script src="/js/vendor/salvattore.js"></script>
-	<script src="/js/vendor/underscore-min.js"></script>
-
-	<script src="/js/lib/login.js"></script>
-	<script src="/js/lib/filters.js"></script>
-	<script src="/js/lib/follow.js"></script>
-	<script src="/js/discover-artists.js"></script>
-
-</body>
-</html>
