--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -19,17 +19,45 @@
 	<!-- ********************************************************************
 		$ HEADER
 	********************************************************************* -->
+	<!-- <header class="header">
+		<a class="logo" href="/">
+			<img class="logo__small" src="/img/logo-small.png">
+			<img class="logo__normal" src="/img/logo.png">
+		</a>
+		<nav class="skinny-menu" data-icon='true'>
+			<a class="skinny-menu__item" href="/works/category/all/page-1">
+				<i class="skinny-menu__item__icon fa fa-paint-brush"></i>
+				<span class="skinny-menu__item__text">Obras</span>
+			</a>
+			<a class="skinny-menu__item" href="/users/specialty/all/page-1">
+				<i class="skinny-menu__item__icon fa fa-heart-o"></i>
+				<span class="skinny-menu__item__text">Artistas</span>
+			</a>
+			<a class="skinny-menu__item active" href="/products/type/all/page-1/">
+				<i class="skinny-menu__item__icon fa fa-diamond"></i>
+				<span class="skinny-menu__item__text">Market</span>
+			</a>
+			<a class="skinny-menu__item js-signInButton">
+				<i class="skinny-menu__item__icon fa fa-user"></i>
+				<span class="skinny-menu__item__text">Sign in</span>
+			</a>
+		</nav>
+	</header> -->
 	<header class="header">
 		<a class="logo" href="/">
 			<img class="logo__small" src="/img/logo-small.png">
 			<img class="logo__normal" src="/img/logo.png">
 		</a>
 		<nav class="skinny-menu" data-icon='true'>
-			<a  class="skinny-menu__item active" href="/works/category/all/page-1">
-				<i class="skinny-menu__item__icon fa fa-search"></i>
-				<span class="skinny-menu__item__text">Descubre</span>
+			<a class="skinny-menu__item active" href="/works/category/all/page-1">
+				<i class="skinny-menu__item__icon fa fa-paint-brush"></i>
+				<span class="skinny-menu__item__text">Obras</span>
 			</a>
-			<a href="#" class="skinny-menu__item">
+			<a class="skinny-menu__item" href="/users/specialty/all/page-1">
+				<i class="skinny-menu__item__icon fa fa-heart-o"></i>
+				<span class="skinny-menu__item__text">Artistas</span>
+			</a>
+			<a class="skinny-menu__item" href="/products/type/all/page-1/">
 				<i class="skinny-menu__item__icon fa fa-diamond"></i>
 				<span class="skinny-menu__item__text">Market</span>
 			</a>
