--- a/public/stylus/elements/buttons.styl
+++ b/public/stylus/elements/buttons.styl
@@ -228,3 +228,20 @@
 				display none
 			&.cancel
 				display table-cell
+
+
+/*------------------------------------*
+	$ BUTTON LIKE
+*------------------------------------*/
+.button-like
+.button-wish-list
+	color #444
+	font-weight 100
+	font-size .85em
+	letter-spacing 1px
+	font-family 'Roboto Condensed'
+
+.button-like
+.button-wish-list
+	&.active
+		color #ccc
