--- a/public/stylus/objects/filters.styl
+++ b/public/stylus/objects/filters.styl
@@ -35,7 +35,7 @@
 		max-width 400px
 		margin auto
 		
-
+		
 /*------------------------------------*
 	$ WORKS CONTAINER
 *------------------------------------*/
@@ -69,6 +69,8 @@
 				padding-left 10rem
 			&.moveRight
 				padding-right 10rem
+		// &__works.moveLeft.moveRight
+			// font-size .7rem
 
 
 /*------------------------------------*
