--- a/public/stylus/style-guide.styl
+++ b/public/stylus/style-guide.styl
@@ -1,68 +1,68 @@
-/*------------------------------------*
-	$ NIB
-*------------------------------------*/
-@import 'nib'
+// /*------------------------------------*
+// 	$ NIB
+// *------------------------------------*/
+// @import 'nib'
 
-/*------------------------------------*
-	$ BASE
-*------------------------------------*/
-@import 'base.styl'
+// /*------------------------------------*
+// 	$ BASE
+// *------------------------------------*/
+// @import 'base.styl'
 
-/*------------------------------------*
-	$ LOGOS
-*------------------------------------*/
-@import 'elements/logos.styl'
+// /*------------------------------------*
+// 	$ LOGOS
+// *------------------------------------*/
+// @import 'elements/logos.styl'
 
-/*------------------------------------*
-	$ MENUS
-*------------------------------------*/
-@import 'elements/menus.styl'
+// /*------------------------------------*
+// 	$ MENUS
+// *------------------------------------*/
+// @import 'elements/menus.styl'
 
-/*------------------------------------*
-	$ TEXTS
-*------------------------------------*/
-@import 'elements/texts.styl'
+// /*------------------------------------*
+// 	$ TEXTS
+// *------------------------------------*/
+// @import 'elements/texts.styl'
 
-/*------------------------------------*
-	$ BUTTONS
-*------------------------------------*/
-@import 'elements/buttons.styl'
+// /*------------------------------------*
+// 	$ BUTTONS
+// *------------------------------------*/
+// @import 'elements/buttons.styl'
 
-/*------------------------------------*
-	$ INPUTS
-*------------------------------------*/
-@import 'elements/inputs.styl'
+// ------------------------------------*
+// 	$ INPUTS
+// *------------------------------------
+// @import 'elements/inputs.styl'
 
-/*------------------------------------*
-	$ WORKS
-*------------------------------------*/
-@import 'elements/works.styl'
+// /*------------------------------------*
+// 	$ WORKS
+// *------------------------------------*/
+// @import 'elements/works.styl'
 
-/*------------------------------------*
-	$ ARTISTS
-*------------------------------------*/
-@import 'elements/artists.styl'
-
-
+// /*------------------------------------*
+// 	$ ARTISTS
+// *------------------------------------*/
+// @import 'elements/artists.styl'
 
 
-/*------------------------------------*
-	$ STYLE GUIDE
-*------------------------------------*/
-body
-	padding 1rem
-	background style-guide-background
+
+
+// /*------------------------------------*
+// 	$ STYLE GUIDE
+// *------------------------------------*/
+// body
+// 	padding 1rem
+// 	background style-guide-background
 	
-.style-guide-wrapper
-	margin auto
-	max-width max-width
-.style-guide-element
-	margin-top 1rem
-	background style-guide-element-background
+// .style-guide-wrapper
+// 	margin auto
+// 	max-width max-width
+// .style-guide-element
+// 	margin-top 1rem
+// 	background style-guide-element-background
 	
-.style-guide-title
-	color #aaa
-	font-size .9rem
-	font-family 'Arial'
-	text-align right
-	// display none
+// .style-guide-title
+// 	color #aaa
+// 	font-size .9rem
+// 	font-family 'Arial'
+// 	text-align right
+// 	// display none
